crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__composer_stability_snapshots__snapshot_popup_visible_same_height.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests/composer_stability_snapshots.rs
assertion_line: 29
expression: render_app(&app)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 ▸ file src/main.rs                                                             
   file src/lib.rs                                                              
   file Cargo.toml                                                              
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 > @                                                                            
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 NORMAL  ...                                                              — ctx
